--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -25,6 +25,7 @@
 .profile img {
     width: 300px;
     height: 400px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
 .profile-details {
@@ -39,6 +40,8 @@
     align-items: center;
     justify-content: flex-end;
     padding-bottom: 20px;
+    border-radius: 10px;
+    color: #454545;
 }
 
 .team-content h3 {
