--- a/src/assets/css/donate.css
+++ b/src/assets/css/donate.css
@@ -16,13 +16,15 @@ h3 #btn {
 }
 
 #qr {
-    width: 50%;
+    width: 80%;
     text-align: center;
-    border: 4px solid #d99c00;
+    border: 4px solid transparent;
     border-radius: 5px;
 }
 
 .qr {
     text-align: center;
+    border-bottom: 1px solid black;
+    margin: auto;
+    width: 80%;
 }
-
