--- a/src/assets/css/media.css
+++ b/src/assets/css/media.css
@@ -40,7 +40,7 @@
     .navlinks {
         position: fixed;
         background: rgb(254, 251, 251);
-        height: 100%;
+        height: 100vh;
         width: 100%;
         left: 0;
         top: -100rem;
@@ -53,9 +53,11 @@
         align-items: center;
         flex-direction: column;
         justify-content: center;
+        backdrop-filter: none;
     }
 
-    .navlinks li:nth-child(6) {
+
+    .navlinks li:nth-child(7) {
         display: none;
     }
 
@@ -90,6 +92,12 @@
 
     .about-content {
         flex-direction: column;
+    }
+
+    .phone-reverse{
+        flex-direction: column-reverse;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
 
@@ -156,9 +164,17 @@
         max-width: 50%;
     }
 
+    .getinvolved{
+        flex-direction: column;
+    }
+
+    .volunteer,.donate-involved{
+        width: 100%;
+    }
+
 
     .hero-section {
-        height: 480px;
+        height: 500px;
     }
 
     .hero-section h1 {
@@ -194,6 +210,7 @@
     .gmap_canvas {
         width: 100% !important;
         padding-top: 2rem;
+        height: 380px;
     }
 
     .contact-box-content {
@@ -242,6 +259,10 @@
 }
 
 @media screen and (max-width: 630px) {
+
+    .hero-section::before{
+        opacity: 0.5;
+    }
     .container {
         width: 100%;
         padding-left: 5px;
@@ -253,15 +274,49 @@
     }
 
     .terms {
-        width: 90%;
+        width: 100%;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
+
+    .volunteer-section .terms{
+        width: 100%;
+        justify-content: center;
+        padding-left: 0rem;
+        padding-right: 0rem;
+    }
+
 
     .contact-section .container {
         width: 100%;
     }
+    
+    .data{width: 48%;}
+    .data h1{
+        font-size: 2.3rem;
+    }
 }
 
 @media screen and (max-width: 430px) {
+
+    .homepage-about .about-text{
+        padding-right: 1px;
+        padding-left: 1px;
+        padding-bottom: 0;
+    }
+
+    .homepage-about .about-image{
+        padding-right: 1px;
+        padding-left: 1px;
+        padding-top: 0;
+    }
+    .section-details h2{
+        font-size: 32px;
+    }
+    .contact-content{
+        padding-top: 1rem;
+    }
+
     .info-section {
         padding: 2rem 1rem;
     }
@@ -307,6 +362,7 @@
         padding: 1rem;
     }
 
+
 }
 
 @media screen and (max-width:350px) {
@@ -315,5 +371,8 @@
     }
     .pet-info{
         width: 88%;
+    }
+    .data h1{
+        font-size: 1rem;
     }
 }
