--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,20 +8,32 @@
     -webkit-font-smoothing: antialiased;
     scroll-behavior: smooth;
     text-decoration: none;
+    font-weight: 600;
 }
 
 nav {
     display: flex;
-    background: white;
     align-items: center;
     justify-content: space-between;
     max-width: 80%;
     margin: auto;
 }
 
-header{
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+header {
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+    backdrop-filter: blur(6px);
+    background: rgba(255, 255, 255, 0.8);
+    top: 0;
+    transition: height 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, background-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
 }
+
+.header-animation {
+    padding-bottom: 0;
+}
+
 
 nav .logo img {
     width: 112px;
@@ -54,7 +66,7 @@ nav .logo {
 .navlinks li a,
 .item a {
     color: #282828;
-    font-weight: 500;
+    font-weight: 600;
     padding: 30px 0;
     display: inline-block;
     text-decoration: none;
@@ -67,7 +79,7 @@ nav .logo {
     display: inline-block;
     padding: 0 25px;
     font-size: 15px;
-    font-weight: 500;
+    font-weight: 700;
     text-decoration: none;
     cursor: pointer;
     border: none;
@@ -81,19 +93,19 @@ nav .logo {
     color: #d99c00;
 }
 
-.payment-box{
+.payment-box {
     margin-left: 2rem;
 }
 
-.donatePageImg{
+.donatePageImg {
     height: 450px;
 }
 
-.moboPayImg{
+.moboPayImg {
     display: none;
 }
 
-.pcPayImg{
+.pcPayImg {
     display: block;
 }
 
@@ -153,16 +165,19 @@ nav .logo {
 }
 
 .hero-section {
-    background: url(../images//hero-image.jpg);
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: center center;
-    -webkit-background-size: cover;
-    background-size: cover;
-    height: 568px;
+    height: 580px;
     display: flex;
     align-items: center;
     padding: 2rem;
+    width: 100%;
+    z-index: 1;
+    background-size: cover;
+    text-decoration: none;
+    background: #000;
+    position: relative;
+    margin: 0;
+    line-height: 1.4;
+    z-index: 1;
 }
 
 
@@ -171,6 +186,10 @@ h1 {
     line-height: 1.2;
     margin: 0 0 10px;
     font-weight: bold;
+}
+
+p {
+    font-weight: 600;
 }
 
 .hero-section h1 {
@@ -184,7 +203,7 @@ h1 {
 }
 
 .container {
-    width: 80%;
+    width: 85%;
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
@@ -213,11 +232,12 @@ hr {
     display: inline-block;
     margin-top: 0;
     outline: none;
+
 }
 
 .section-details {
     text-align: center;
-    padding: 0.7rem;
+    margin: 0.7rem;
 }
 
 .info-section {
@@ -227,7 +247,7 @@ hr {
 .about-content {
     display: flex;
     padding: 1rem 0;
-    align-items: center;
+    align-items: start;
     justify-content: center;
 }
 
@@ -237,14 +257,88 @@ hr {
     padding: 0.7rem;
 }
 
-.about-image img{
+
+
+.about-image img {
     width: 100%;
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    height: 0;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.statics {
+    position: relative;
+    z-index: 1;
+    background: #eeeeee;
+    border-radius: 15px;
+    margin-bottom: 1rem;
+}
+
+.dark-blue .section-heading h1 {
+    color: #d19f23;
+}
+
+.btn-container a:hover {
+    background: #daa216;
+}
+
+.adopt-card .btn-container a:hover {
+    background: #d19f23;
+    color: #fff;
+}
+
+.adopt-card .btn-container a {
+    color: #d19f23;
+    background: #fff;
+    border: 1px solid #d19f23;
+}
+
+
+.datas {
+    padding: 2rem 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.data {
+    padding: 1rem;
+    text-align: center;
+}
+
+.data h1 {
+    font-size: 50px;
+    margin-top: 2px;
+}
+
+
+.data h3 {
+    color: #464647;
+    font-size: 20px;
+}
+
+.dark-blue .data img {
+    width: 50px;
 }
 
 
 .about-text {
     line-height: 2;
     font-size: 17px;
+    text-align: justify;
 }
 
 .btn-container {
@@ -254,28 +348,73 @@ hr {
 
 .btn-container a,
 .btn-container button {
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 700;
     text-transform: uppercase;
     fill: #fff;
     color: #fff;
     background-color: #d99c00;
     border-radius: 50px;
-    padding: 20px 40px;
+    padding: 12px 20px;
     text-decoration: none;
+    transition: all 0.3s ease-in-out;
 }
 
 .btn-container button {
     outline: none;
     border: none;
     cursor: pointer;
+    padding: 1.1rem 1.6rem
 }
+
+
+.getinvolved {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 1rem;
+}
+
+.getinvolved img {
+    width: 80px;
+}
+
+.getinvolved h3 {
+    font-size: 18px;
+    color: #464647;
+    width: 90%;
+    margin: auto;
+}
+
+.getinvolved h1 {
+    font-size: 30px;
+    padding-top: 10px;
+    color: #d99c00;
+}
+
+.volunteer,
+.donate-involved {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    background-color: #fafafa;
+    color: #282828;
+    padding: 1rem;
+    width: 50%;
+    margin: 10px;
+    transition: all 0.2s ease-in-out;
+    border-radius: 10px;
+}
+
+.volunteer:hover,
+.donate-involved:hover {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
 
 .odds {
     background: url(../images/odds-bg.jpg);
 }
 
-.features{
+.features {
     flex-wrap: wrap;
 }
 
@@ -283,28 +422,33 @@ hr {
     padding: 2rem 0;
 }
 
-.features-box{
+.features-box {
     padding: 10px;
     display: flex;
     width: 50%;
     margin-bottom: 10px;
 }
 
-.features-box img{
+.features-section {
+    display: flex;
+    align-items: start;
+}
+
+.features-box img {
     height: 71px;
     width: 100px;
     margin-right: 1rem;
 }
 
-.features-box:nth-child(2) img
-{
+.features-box:nth-child(2) img {
     margin-right: 2rem;
 }
-.features-box h3{
+
+.features-box h3 {
     margin-bottom: 10px;
 }
 
-.features-box p{
+.features-box p {
     line-height: 1.6;
 }
 
@@ -336,6 +480,14 @@ hr {
     overflow: hidden;
     margin-top: 10px;
     border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.39) 0px 1px 4px;
+    padding: 3px;
+}
+
+
+
+.gallery-column img {
+    border-radius: 10px;
 }
 
 .gallery-column img:hover {
@@ -360,12 +512,12 @@ hr {
     position: relative;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     padding: 1rem;
-    
+
 }
 
 .pet-name {
     text-align: center;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 2;
     color: #282828;
     letter-spacing: -0.04em;
@@ -374,7 +526,7 @@ hr {
 
 
 .adopt-card img {
-    width:  360px;
+    width: 360px;
     border-radius: 10px;
     object-fit: cover;
 }
@@ -402,10 +554,12 @@ hr {
     margin: auto;
 }
 
+
 .pet-gender,
 .pet-age {
     color: #fff;
     width: 50%;
+    font-weight: 600;
 }
 
 .pet-gender {
@@ -456,7 +610,7 @@ hr {
     margin-right: 0;
 }
 
-img{
+img {
     border-radius: 10px;
 }
 
@@ -466,9 +620,10 @@ img{
     outline: none;
     font-size: 16px;
     border-radius: 5px;
+    margin-top: 2rem;
 }
 
-.contact-form-box{
+.contact-form-box {
     padding: 2rem;
     border-radius: 10px;
 }
@@ -480,7 +635,7 @@ img{
 }
 
 .contact-section h3 {
-    font-weight: 600;
+    font-weight: 700;
     font-size: 23px;
     color: #282828;
 }
@@ -516,6 +671,7 @@ img{
     font-size: 16px;
     background-color: #f8f8f8;
     border-radius: 20px;
+    font-weight: 600;
 }
 
 .contact-details {
@@ -543,7 +699,7 @@ img{
 }
 
 .item h3 {
-    font-weight: 600;
+    font-weight: 700;
     font-size: 17px;
     margin-bottom: 1.6rem;
 }
@@ -557,12 +713,12 @@ img{
     width: 55px;
     height: 55px;
     margin-right: 2rem;
-display: flex;
-justify-content: center;
-    
+    display: flex;
+    justify-content: center;
+
 }
 
-.item h4{
+.item h4 {
     font-size: 20px;
     color: #000;
     margin-bottom: 7px;
@@ -649,19 +805,21 @@ footer #logo img {
 }
 
 .video {
-    position:relative;
-    padding-bottom:56.25%; /* aspect ration for 16:9 */
-    /*padding-top: 20px;*/ /* you can add padding-top if needed */
-    height:0;
-    overflow:hidden;
+    position: relative;
+    padding-bottom: 56.25%;
+    /* aspect ration for 16:9 */
+    /*padding-top: 20px;*/
+    /* you can add padding-top if needed */
+    height: 0;
+    overflow: hidden;
 }
 
 .video iframe {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     border-radius: 5px;
 }
 
@@ -710,21 +868,75 @@ footer .links a {
     z-index: 1;
 }
 
-.window::before,
-.menu-box::before {
+.involved-section {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'quicksand';
+    width: 100%;
+    z-index: 1;
+    text-align: center;
+    background-size: cover;
+    text-decoration: none;
+    background: #000;
+    color: white;
+    font-size: 20px;
+    justify-content: space-evenly;
+    min-height: 260px;
+    position: relative;
+    margin: 0;
+    line-height: 1.4;
+    z-index: 1;
+
+}
+
+.hero-section::before {
     content: '';
-    background: url(../images/window-bg.jpg) ;
+    background: url(../images/download.jpg) center;
     z-index: -1;
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    opacity: 0.6;
+    opacity: 0.5;
     background-repeat: no-repeat;
-    background-position: left;
     background-size: cover;
 }
+
+.window::before,
+.menu-box::before,
+.involved-section::before {
+    content: '';
+    background: url(../images/1-3.jpg);
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0.4;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.involved-section::before {
+    content: '';
+    background: url(../images/menu-bg.jfif);
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0.4;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+
 
 .menu-box .container {
     width: 90%;
@@ -732,7 +944,7 @@ footer .links a {
 
 .menu-box:before {
     opacity: 0.5;
-    background: url(../images/menu-bg.jfif) center;
+    background: url(../images/1-3.jpg) center;
     background-size: cover;
 }
 
@@ -824,7 +1036,7 @@ footer .links a {
     border-radius: 50%;
     color: #fff;
     position: fixed;
-    bottom: 40px;
+    bottom: 50px;
     right: 40px;
     z-index: 999;
     border: none;
@@ -837,7 +1049,7 @@ footer .links a {
     align-items: center;
 }
 
-.myBtn i{
+.myBtn i {
     background: #282828;
     width: 45px;
     height: 45px;
@@ -853,45 +1065,33 @@ footer .links a {
 }
 
 .media-section .container {
-    padding-top: 10px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
     width: 100%;
 }
 
 .media-section .media img {
     padding: 5px;
-    width: 200px;
-    max-height: 80px;
+    width: 100%;
+    margin: auto;
 }
 
-.media{
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    border-radius: 10px;
-    padding: 1rem;
-    height: 80px;
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    margin: 10px;
-}
-
-.terms{
+.terms {
     line-height: 30px;
 }
 
-.terms h1{
+.terms h1 {
     font-size: 29px;
     margin: 19px 0;
     color: #d19f23;
 }
 
-.terms h2{
+.terms h2 {
     color: #8e690c;
 }
 
-.terms h2,.terms h3,.terms ul,.terms li ,.terms p{
+.terms h2,
+.terms h3,
+.terms ul,
+.terms li,
+.terms p {
     margin: 19px 0;
 }
